<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"

        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_text_port"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">
        </TextView>

        <Button
            android:id="@+id/englishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:text="@string/english_btn">
        </Button>

        <Button
            android:id="@+id/portugueseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:text="@string/portuguese_btn">
        </Button>

        <Button
            android:id="@+id/frenchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:text="@string/french_btn">
        </Button>

        <Button
            android:id="@+id/spanishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:text="@string/spanish_btn">
        </Button>

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="120dp"
            android:text="@string/go_back">
        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>