<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textureView1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/text_view_2_port"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_margin="20dp">
        </TextView>

        <TextView
            android:id="@+id/textureView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/textureView1"
            android:text="@string/my_data_title"
            android:textStyle="italic"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_margin="10dp">
        </TextView>

        <TextView
            android:id="@+id/textureView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/my_data"
            android:layout_below="@id/textureView2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="20dp">
        </TextView>

        <Button
            android:id="@+id/btnGoBackToActivity1"
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:layout_below="@id/textureView3"
            android:layout_margin="20dp"
            android:text="@string/text_btn_2">
        </Button>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>