<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Activity1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_1_port"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="30sp">
            </TextView>

            <Button
                android:id="@+id/btnGoBackToActivity2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text="@string/text_btn_1"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                tools:ignore="TextSizeCheck">
            </Button>

            <Button
                android:id="@+id/btnGoToLanguage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text="@string/language_text_port"
                android:backgroundTint="@color/red"
                tools:ignore="TextSizeCheck">
            </Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

